--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
                     Kuldeep Vihar Quarsi Bypass Road,<br> near Jyoti Public School<br>
                     Aligarh,Uttar Pradesh<br>
                     Pin code:- 202001</p>
+               <b>Factory:</b><br>
+									NH-34, Sharidham Colony, Aligarh-Delhi Highway,<br> 
+									Alinagar, Aligarh, Uttar Pradesh<br>
+                  Pincode-202002 </p>    
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
