--- a/contactus.html
+++ b/contactus.html
@@ -85,10 +85,16 @@
 						</div>
 						<div class="details">
 							<span>Location</span>
-							<span><b>Head office:</b><br>
+							<span>
+								<b>Head office:</b><br>
 								Kuldeep Vihar Quarsi Bypass Road,<br> near Jyoti Public School<br>
 								Aligarh,Uttar Pradesh<br>
 								Pin code:- 202001</span>
+							<span>
+								<b>Factory:</b><br>
+									NH-34, sharidham colony, Aligarh-Delhi highway,<br> 
+									Alinagar, Aligarh, Uttar Pradesh<br> 
+								        Pincode-202002</span>
 						</div>
 					</div>
 
